# Launcher-OS

./: .clang-format  .gitignore  CMakeLists.txt  PCH.h  README.md
include/: FetchLibraries.cmake
include/glad/: glad.h
resources/: resources.rc
shaders/opengl/: position.fsh  position.vsh  position_color.fsh  position_color.vsh  position_tex.fsh  position_tex.vsh  position_tex_color.fsh  position_tex_color.vsh
shaders/vulkan/: position.frag  position.vert  position_color.frag  position_color.vert  position_tex.frag  position_tex.vert  position_tex_color.frag  position_tex_color.vert
src/: main.cpp
src/borion/: BorionContext.cpp  BorionContext.h  Injector.cpp  Injector.h
src/engine/renderer/: Renderer.cpp  Renderer.h
src/engine/renderer/api/: AnimatedTexture.cpp  AnimatedTexture.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  RendererContext.cpp  RendererContext.h  Tessellator.cpp  Tessellator.h  TexturedMesh.cpp  TexturedMesh.h  VertexFormats.h
src/engine/renderer/opengl/: OGLRenderer.cpp  OGLRenderer.h
src/engine/renderer/opengl/shader/: Shader.cpp  Shader.h  ShaderUtil.cpp  ShaderUtil.h
src/engine/renderer/opengl/tessellation/: Mesh.cpp  Mesh.h
src/engine/renderer/opengl/texture/: TextureUtil.cpp  TextureUtil.h
src/engine/renderer/utils/: glad.cpp
src/engine/renderer/utils/gif/: EasyGifReader.cpp  EasyGifReader.h  GIF.cpp  GIF.h
src/engine/renderer/vulkan/: VKRenderer.cpp  VKRenderer.h  Vulkan.cpp  Vulkan.h
src/engine/renderer/vulkan/descriptor/: DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorGrowable.cpp  DescriptorAllocatorGrowable.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.h  DescriptorWriter.cpp  DescriptorWriter.h  PoolSizeRatio.h
src/engine/renderer/vulkan/pipeline/: Pipeline.cpp  Pipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineUtils.cpp  PipelineUtils.h
src/engine/renderer/vulkan/tessellation/: Mesh.cpp  Mesh.h
src/engine/renderer/vulkan/utils/: Buffer.h  BufferUtils.cpp  BufferUtils.h  BufferedImage.h  FragPushConstants.h  ImageUtils.cpp  ImageUtils.h  Init.cpp  Init.h  PushConstants.h  ShaderUtils.cpp  ShaderUtils.h  Vertex.h
src/engine/window/: Win32Window.cpp  Win32Window.h
src/utils/: Logger.cpp  Logger.h  TimeUtils.cpp  TimeUtils.h  Utils.cpp  Utils.h
